[gd_scene load_steps=25 format=3 uid="uid://dll1hghj3kqku"]

[ext_resource type="Script" uid="uid://13q5ja6jlwc8" path="res://Scripts/main_menu.gd" id="1_o3ut0"]
[ext_resource type="Texture2D" uid="uid://dwkvyj674h8i8" path="res://Assets/MainMenuArt/MainMenuBG.png" id="2_oftkg"]
[ext_resource type="Texture2D" uid="uid://bpnsp8jx4psqr" path="res://Assets/MainMenuArt/BBLogo.png" id="3_40n20"]
[ext_resource type="Texture2D" uid="uid://bxhm5q11rp113" path="res://Assets/MainMenuArt/TitleText.png" id="4_q0l0j"]
[ext_resource type="Texture2D" uid="uid://dfcpr2mrp3bph" path="res://icon.svg" id="4_wyh8j"]
[ext_resource type="Texture2D" uid="uid://dkbef001e5i44" path="res://Assets/MainMenuArt/Buttons/PlayDefault.png" id="6_wyh8j"]
[ext_resource type="Texture2D" uid="uid://68kip2r7r8th" path="res://Assets/MainMenuArt/Buttons/PlayPress.png" id="7_ujyyl"]
[ext_resource type="Texture2D" uid="uid://bm33anru3jn75" path="res://Assets/MainMenuArt/Buttons/PlayHover.png" id="8_mkpwh"]
[ext_resource type="Texture2D" uid="uid://bvw3j1dk2kj5i" path="res://Assets/MainMenuArt/Buttons/CreditsDefault.png" id="9_4nkqq"]
[ext_resource type="Texture2D" uid="uid://cm43ooilo1khv" path="res://Assets/MainMenuArt/Buttons/CreditsPress.png" id="10_ehtkc"]
[ext_resource type="Texture2D" uid="uid://w5qb5ewyu655" path="res://Assets/MainMenuArt/Buttons/CreditsHover.png" id="11_6dk6o"]
[ext_resource type="Texture2D" uid="uid://cil2psu5wpjtx" path="res://Assets/MainMenuArt/Buttons/QuitDefault.png" id="12_jr6u5"]
[ext_resource type="Texture2D" uid="uid://uakiud2pt6ci" path="res://Assets/MainMenuArt/Buttons/QuitPress.png" id="13_6m47u"]
[ext_resource type="Texture2D" uid="uid://csxw1vneror1v" path="res://Assets/MainMenuArt/Buttons/QuitHover.png" id="14_84iac"]
[ext_resource type="Texture2D" uid="uid://bc7ls65kuh3nb" path="res://Assets/MainMenuArt/Buttons/SettingsDefault.png" id="15_5n0dv"]
[ext_resource type="Texture2D" uid="uid://ciipiijoleop4" path="res://Assets/MainMenuArt/Buttons/SettingsPress.png" id="16_ne6ao"]
[ext_resource type="Texture2D" uid="uid://c8h5f68v3nivw" path="res://Assets/MainMenuArt/Buttons/SettingsHover.png" id="17_tt8ml"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ujyyl"]
atlas = ExtResource("4_wyh8j")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3bi6"]
atlas = ExtResource("3_40n20")
region = Rect2(0, 0, 380, 388)

[sub_resource type="SpriteFrames" id="SpriteFrames_wyh8j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujyyl")
}],
"loop": false,
"name": &"Kaboom",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3bi6")
}],
"loop": false,
"name": &"Logo",
"speed": 0.0
}]

[sub_resource type="InputEventKey" id="InputEventKey_cya8t"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_0054t"]
events = [SubResource("InputEventKey_cya8t")]

[sub_resource type="InputEventKey" id="InputEventKey_u5hv7"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_ohhe7"]
events = [SubResource("InputEventKey_u5hv7")]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_o3ut0")

[node name="BG" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1200.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -600.0
offset_right = 960.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oftkg")

[node name="Icon" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 758.0
offset_top = 84.0
offset_right = 1138.0
offset_bottom = 464.0

[node name="TextureRect" type="TextureRect" parent="Icon"]
visible = false
layout_mode = 1
offset_right = 380.0
offset_bottom = 388.0
texture = ExtResource("3_40n20")

[node name="LogoSprite" type="AnimatedSprite2D" parent="Icon"]
sprite_frames = SubResource("SpriteFrames_wyh8j")
animation = &"Logo"
centered = false

[node name="TitleText" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1200.0

[node name="TextureRect" type="TextureRect" parent="TitleText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -620.0
offset_top = -110.0
offset_right = 620.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_q0l0j")

[node name="PlayButton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 340.0
offset_top = 750.0
offset_right = 1580.0
offset_bottom = 860.0
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_0054t")
texture_normal = ExtResource("6_wyh8j")
texture_pressed = ExtResource("7_ujyyl")
texture_hover = ExtResource("8_mkpwh")
ignore_texture_size = true
metadata/_edit_use_anchors_ = true

[node name="CreditButton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 340.0
offset_top = 898.0
offset_right = 732.0
offset_bottom = 1008.0
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="CreditButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Credits Menu"
texture_normal = ExtResource("9_4nkqq")
texture_pressed = ExtResource("10_ehtkc")
texture_hover = ExtResource("11_6dk6o")
ignore_texture_size = true
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 764.0
offset_top = 898.0
offset_right = 1156.0
offset_bottom = 1008.0
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="QuitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_ohhe7")
texture_normal = ExtResource("12_jr6u5")
texture_pressed = ExtResource("13_6m47u")
texture_hover = ExtResource("14_84iac")
ignore_texture_size = true

[node name="SettingsButton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1188.0
offset_top = 898.0
offset_right = 1580.0
offset_bottom = 1007.0
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Settings Menu"
texture_normal = ExtResource("15_5n0dv")
texture_pressed = ExtResource("16_ne6ao")
texture_hover = ExtResource("17_tt8ml")
ignore_texture_size = true

[node name="SecretButton" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 182.0
offset_top = 182.0
offset_right = 194.0
offset_bottom = 194.0

[node name="TextureButton" type="TextureButton" parent="SecretButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "..."
button_mask = 2

[connection signal="pressed" from="PlayButton/TextureButton" to="." method="on_play_button_pressed"]
[connection signal="pressed" from="CreditButton/TextureButton" to="." method="on_credit_button_pressed"]
[connection signal="pressed" from="QuitButton/TextureButton" to="." method="on_quit_button_pressed"]
[connection signal="pressed" from="SettingsButton/TextureButton" to="." method="on_settings_button_pressed"]
[connection signal="pressed" from="SecretButton/TextureButton" to="." method="on_secret_button_pressed"]
